# mlops-project-generator

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
backend/: api.py  render.yaml  requirements.txt
docs/: 404.html  index.html
generator/: __init__.py  analytics.py  cli.py  cloud_deployer.py  config_manager.py  dependency_checker.py  performance_profiler.py  project_lifecycle.py  prompts.py  renderer.py  stack_presets.py  validator.py  validators.py
generator/templates/common/: README.md.j2  requirements.txt.j2
generator/templates/common/configs/: config.yaml.j2
generator/templates/common/snippets/: model_import.py.j2
generator/templates/common/tests/: test_smoke.py.j2
generator/templates/nlp/configs/: nlp.yaml.j2
generator/templates/pytorch/src/: train.py.j2
scripts/: prepare_package.py  publish.py
templates/common/: .env.example.j2  Makefile  README.md.j2  gitignore  pyproject.toml.j2  requirements.txt.j2
templates/common/configs/: config.yaml.j2
templates/pytorch/src/: inference.py.j2  train.py.j2
templates/sklearn/src/: inference.py.j2  train.py.j2
templates/tensorflow/src/: inference.py.j2  train.py.j2
tests/: __init__.py  conftest.py  test_cli.py  test_renderer.py  test_stack_presets.py  test_validator.py  test_validators.py
web_api/: main.py  requirements.txt
web_ui/: .env.production  .gitignore  package-lock.json  package.json  start-dev.js
web_ui/app/: globals.css  layout.tsx
web_ui/scripts/: sync-templates.mjs
web_ui/src/app/: globals.css  layout.tsx  page.tsx
web_ui/src/components/: MLOpsForm.tsx  OptionCards.tsx  theme-toggle.tsx
web_ui/src/lib/: index.ts  task-store.ts
(+121 files in other folders)
